--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+      <!--
         <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Barcode Scanning Inventory</field>
             <field name="model">stock.picking</field>
@@ -14,14 +15,16 @@
                 </xpath>
             </field>
         </record>
-        <record model="ir.ui.view" id="stock_picking_barcode_form">
+
+      -->
+        <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">stock.picking.barcode.form</field>
-            <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <field name="origin" position="after">
-                    <field name="picking_checked"/>
-                </field>
+              <xpath expr="//field[@name='origin']" position="after">
+                <field name="picking_checked"/>
+              </xpath>
                 <notebook>
                     <page string="Barcode Picking" name="barcode_picking">
                         <h2>
@@ -47,28 +50,31 @@
         <!-- ............... HERENCIA VISTA EN TREE ...............-->
         <record model="ir.ui.view" id="sii_barcode_tree">
             <field name="name">sii.barcode.tree</field>
-            <field name="inherit_id" ref="stock.vpicktree"/>
             <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock.vpicktree"/>
             <field name="arch" type="xml">
-                <field name="state" position="after">
-                    <field name="picking_checked" />
-                </field>
+              <xpath expr="//field[@name='state']" position="after">
+                  <field name="picking_checked" />
+              </xpath>
             </field>
         </record>
 
 
-
+<!--
         <record model="ir.ui.view" id="sii_barcode_tree_move">
             <field name="name">sii.barcode.tree.move</field>
-            <field name="inherit_id" ref="stock.vpicktree"/>
+
             <field name="model">stock.move</field>
+            <field name="inherit_id" ref="stock.vpicktree"/>
             <field name="arch" type="xml">
                 <field name="state" position="after">
                     <field name="bool_barcode" />
                 </field>
             </field>
         </record>
-        
+
+      -->
+
     </data>
 
 </odoo>
