--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-      <!--
+
         <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Barcode Scanning Inventory</field>
             <field name="model">stock.picking</field>
@@ -16,7 +16,7 @@
             </field>
         </record>
 
-      -->
+      
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">stock.picking.barcode.form</field>
             <field name="model">stock.picking</field>
@@ -47,18 +47,18 @@
             </field>
         </record>
 
-        <!-- ............... HERENCIA VISTA EN TREE .............
+        <!-- ............... HERENCIA VISTA EN TREE ...............-->
         <record model="ir.ui.view" id="sii_barcode_tree">
             <field name="name">sii.barcode.tree</field>
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.vpicktree"/>
             <field name="arch" type="xml">
-              <xpath expr="//field[@name='state']" position="after">
+              <field name="state" position="after">
                   <field name="picking_checked" />
-              </xpath>
+              </field>
             </field>
         </record>
-...-->
+
 
 <!--
         <record model="ir.ui.view" id="sii_barcode_tree_move">
