--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -8,23 +8,23 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='location_id']" position="after">
-                    <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
+                    <field name="barcodex" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
                 </xpath>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
-                    <field name="barcode"/>
+                    <field name="barcodex"/>
                 </xpath>
             </field>
         </record>
 
-      
+
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">stock.picking.barcode.form</field>
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-              <xpath expr="//field[@name='origin']" position="after">
+              <field name="origin" position="after">
                 <field name="picking_checked"/>
-              </xpath>
+              </field>
                 <notebook>
                     <page string="Barcode Picking" name="barcode_picking">
                         <h2>
