--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -15,28 +15,28 @@
                     <field name="barcode"/>
 
                 </xpath>
-                <field name="origin" position="after">
+                <field name="partner_id" position="before">
                   <field name="picking_checked"/>
                 </field>
-                  <notebook>
-                      <page string="Barcode Picking" name="barcode_picking">
-                          <h2>
-                              <field name="temp_barcode" placeholder="Insert EAN-13 Code"/>
-                          </h2>
-                          <field name="productcodes_ids">
-                              <tree string="Picking" editable="bottom" colors="red:bool_barcode==False;">
-                                  <field name="product_id" required="1"/>
-                                  <field name="qty" required="1" sum="Sum"/>
-                                  <field name="default_code" readonly="1"/>
-                                  <field name="barcode" readonly="1"/>
-                                  <field name="bool_barcode" invisible="1"/>
-                              </tree>
-                          </field>
-                          <div class="alert alert-info" role="alert" style="margin-bottom:0px;" attrs="{'invisible': [('picking_checked', '=', True)]}">
-                              Incomplete Picking
-                          </div>
-                      </page>
-                  </notebook>
+
+                    <page string="Barcode Picking" name="barcode_picking">
+                        <h2>
+                            <field name="temp_barcode" placeholder="Codigo de barras"/>
+                        </h2>
+                        <field name="productcodes_ids">
+                            <tree string="Picking" editable="bottom" colors="red:bool_barcode==False;">
+                                <field name="product_id" required="1"/>
+                                <field name="qty" required="1" sum="Sum"/>
+                                <field name="default_code" readonly="1"/>
+                                <field name="barcode" readonly="1"/>
+                                <field name="bool_barcode" invisible="1"/>
+                            </tree>
+                        </field>
+                        <div class="alert alert-info" role="alert" style="margin-bottom:0px;" attrs="{'invisible': [('picking_checked', '=', True)]}">
+                            Escaneo Incompleto
+                        </div>
+                    </page>
+
             </field>
         </record>
 
