--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -8,11 +8,11 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='location_id']" position="after">
-                    <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
+                    <field name="barcodex" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
                     <field name="picking_checked"/>
                 </xpath>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
-                    <field name="barcode"/>
+                    <field name="barcodex"/>
 
                 </xpath>
                 <field name="move_line_ids" position="replace">
@@ -24,7 +24,7 @@
                                 <field name="product_id" required="1"/>
                                 <field name="qty" required="1" sum="Sum"/>
                                 <field name="default_code" readonly="1"/>
-                                <field name="barcodex" readonly="1"/>
+                                <field name="barcode" readonly="1"/>
                                 <field name="bool_barcode" invisible="1"/>
                             </tree>
                         </field>
