--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -9,6 +9,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='location_id']" position="after">
                     <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
+                    <field name="picking_checked"/>
                 </xpath>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                     <field name="barcode"/>
@@ -16,7 +17,7 @@
             </field>
         </record>
 
-
+<!--
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">stock.picking.barcode.form</field>
             <field name="model">stock.picking</field>
@@ -46,7 +47,7 @@
                 </notebook>
             </field>
         </record>
-
+-->
         <!-- ............... HERENCIA VISTA EN TREE ...............
         <record model="ir.ui.view" id="sii_barcode_tree">
             <field name="name">sii.barcode.tree</field>
