--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -7,9 +7,11 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
+                <field name="partner_id" position="before">
+                  <field name="picking_checked" readonly="1"/>
+                </field>
                 <xpath expr="//field[@name='location_id']" position="after">
                     <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
-                    <field name="picking_checked"/>
                 </xpath>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                     <field name="barcode"/>
