--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -7,9 +7,6 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <field name="partner_id" position="before">
-                  <field name="picking_checked" readonly="1"/>
-                </field>
                 <xpath expr="//field[@name='location_id']" position="after">
                     <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
                 </xpath>
@@ -17,6 +14,17 @@
                     <field name="barcode"/>
                 </xpath>
             </field>
+        </record>
+
+        <record id="automated_scanning_inventory">
+          <field name="name">Automated Scanning Inventory</field>
+          <field name="model">stock.picking</field>
+          <field name="inherit_id" ref="stock.view_picking_form"/>
+          <field name="arch" type="xml">
+            <field name="partner_id" position="before">
+              <field name="picking_checked" />
+            </field>
+          </field>
         </record>
 
 <!--
