--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -16,7 +16,7 @@
             </field>
         </record>
 
-        <record id="automated_scanning_inventory">
+        <record id="automated_scanning_inventory" model="ir.ui.view">
           <field name="name">Automated Scanning Inventory</field>
           <field name="model">stock.picking</field>
           <field name="inherit_id" ref="stock.view_picking_form"/>
