--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -10,6 +10,9 @@
                 <xpath expr="//field[@name='location_id']" position="after">
                     <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
                 </xpath>
+                <xpath expr="//field[@name='origin']" position="before">
+                    <field name="aux_barcode" placeholder="Insert EAN-13 Code"/>
+                </xpath>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                     <field name="barcode"/>
                 </xpath>
