--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -10,8 +10,10 @@
                 <xpath expr="//field[@name='location_id']" position="after">
                     <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
                 </xpath>
-                <field name="origin" position="before">
+                <field name="partner_id" position="before">
+                    <h2>
                     <field name="aux_barcode" placeholder="Insert EAN-13 Code"/>
+                  </h2>
                 </field>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                     <field name="barcode"/>
