--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -10,20 +10,15 @@
                 <xpath expr="//field[@name='location_id']" position="after">
                     <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
                 </xpath>
-                <field name="partner_id" position="before">
-                    <h2>
-                    <field name="aux_barcode" placeholder="Insert EAN-13 Code"/>
-                  </h2>
-                </field>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                     <field name="barcode"/>
                 </xpath>
             </field>
         </record>
 
-<!--
+
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
-            <field name="name">stock.picking.barcode.form</field>
+            <field name="name">Barcode reception</field>
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
@@ -51,8 +46,8 @@
                 </notebook>
             </field>
         </record>
--->
-        <!-- ............... HERENCIA VISTA EN TREE ...............
+
+        <!-- ............... HERENCIA VISTA EN TREE ...............-->
         <record model="ir.ui.view" id="sii_barcode_tree">
             <field name="name">sii.barcode.tree</field>
             <field name="model">stock.picking</field>
@@ -63,7 +58,7 @@
               </field>
             </field>
         </record>
--->
+
 
 <!--
         <record model="ir.ui.view" id="sii_barcode_tree_move">
