--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='location_id']" position="after">
-                    <field name="barcode" attrs="{'invisible': [('state', '==', 'assigned')]}"/>
+                    <field name="barcode"/>
                 </xpath>
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                     <field name="barcode"/>
