--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -7,12 +7,9 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='location_id']" position="after">
-                    <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
-                </xpath>
-                <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
-                    <field name="barcode"/>
-                </xpath>
+              <field name="origin" position="after">
+                <field name="x_barcode"/>
+              </field>
             </field>
         </record>
 
