--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
               <field name="origin" position="after">
-                <field name="x_barcode"/>
+                <field name="barcode"/>
               </field>
             </field>
         </record>
