update text view

--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -7,7 +7,7 @@
             <field name="model">stock.move</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <field name="x_barcode" position="after"
+                <field name="x_barcode" position
             </field>
         </record>
 
@@ -24,6 +24,7 @@
                   <page string="Escaneo Automatico" name="barcode_picking">
                           <h2>
                               <field name="temp_barcode" placeholder="Codigo de barras"/>
+                              <field name="x_barcode" placeholder="Codigo de barras"/>
                           </h2>
                           <field name="productcodes_ids">
                               <tree string="Resultados" editable="bottom" colors="red:bool_barcode==False;">
