--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -37,8 +37,8 @@
                           <div class="alert alert-info" role="alert" style="margin-bottom:0px;" attrs="{'invisible': [('picking_checked', '=', True)]}">
                               <field name="log_scanner"/>
                           </div>
-                          <div class="center-align">
-                          <button string="Generar Movimientos" type="object" name="generate_moves" class="oe_highlight"/>
+                          <div class="center-align" style="margin-top: 20px; margin-left: 10px;">
+                            <button string="Generar Movimientos" type="object" name="generate_moves" class="oe_highlight"/>
                           </div>
                       </page>
                 </notebook>
