--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -18,7 +18,7 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
               <field name="origin" position="after">
-              <!--  <field name="picking_checked"/> -->
+                <field name="picking_checked"/>
               </field>
                 <notebook>
                   <page string="Escaneo Automatico" name="barcode_picking">
@@ -52,7 +52,7 @@
             <field name="inherit_id" ref="stock.vpicktree"/>
             <field name="arch" type="xml">
               <field name="state" position="after">
-                  <!-- <field name="picking_checked" /> -->
+                  <field name="picking_checked" />
               </field>
             </field>
         </record>
