--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -45,7 +45,7 @@
                 </notebook>
             </field>
         </record>
-        <!-- ............... HERENCIA VISTA EN TREE ...............-->
+        <!-- ............... HERENCIA VISTA EN TREE ...............
         <record model="ir.ui.view" id="sii_barcode_tree">
             <field name="name">sii.barcode.tree</field>
             <field name="model">stock.picking</field>
@@ -57,7 +57,7 @@
             </field>
         </record>
 
-
+-->
 <!--
         <record model="ir.ui.view" id="sii_barcode_tree_move">
             <field name="name">sii.barcode.tree.move</field>
