--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="barcode_scanning_inventory" model="ir.ui.view">
+        <!-- <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Barcode Scanning Inventory</field>
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
@@ -13,7 +13,7 @@
                     <field name="barcode"/>
                 </xpath>
             </field>
-        </record>
+        </record> -->
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">Barcode reception</field>
             <field name="model">stock.picking</field>
