--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <!-- <record id="barcode_scanning_inventory" model="ir.ui.view">
+         <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Barcode Scanning Inventory</field>
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='location_id']" position="after">
-                    <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
-                </xpath>
+                <!--<xpath expr="//field[@name='location_id']" position="after">
+              </xpath> -->
                 <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                     <field name="barcode"/>
+                    <field name="talla"/>
+                    <field name="color"/>
                 </xpath>
             </field>
-        </record> -->
+        </record>
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">Barcode reception</field>
             <field name="model">stock.picking</field>
@@ -32,6 +33,8 @@
                                   <field name="product_id" required="1"/>
                                   <field name="qty" required="1" sum="Sum"/>
                                   <field name="default_code" readonly="1"/>
+                                  <field name="talla" readonly="1"/>
+                                  <field name="color" readonly="1"/>
                                   <field name="barcode" readonly="1"/>
                                   <field name="bool_barcode" invisible="1"/>
                               </tree>
