--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <!-- <record id="barcode_scanning_inventory" model="ir.ui.view">
-            <field name="name">Barcode Scanning Inventory</field>
-            <field name="model">stock.picking</field>
-            <field name="inherit_id" ref="stock.view_picking_form"/>
+         <record id="barcode_scanning_inventory" model="ir.ui.view">
+            <field name="name">Add Tributes to Product</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='location_id']" position="after">
-                    <field name="barcode" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
-                </xpath>
-                <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
-                    <field name="barcode"/>
-                </xpath>
+            <field name="categ_id" position="after">
+                <field name="talla"/>
+                <field name="color"/>
             </field>
-        </record> -->
+            </field>
+        </record>
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">Barcode reception</field>
             <field name="model">stock.picking</field>
