--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -3,7 +3,7 @@
     <data>
          <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Add Tributes to Product</field>
-            <field name="model">product.product</field>
+            <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
             <field name="categ_id" position="after">
