--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -7,8 +7,8 @@
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
             <field name="categ_id" position="after">
-                <field name="talla"/>
-                <field name="color"/>
+                <field name="default_talla"/>
+                <field name="default_color"/>
             </field>
             </field>
         </record>
