--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -17,6 +17,11 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
+              <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
+                  <field name="barcode"/>
+                  <field name="default_talla"/>
+                  <field name="default_color"/>
+              </xpath>
               <field name="origin" position="after">
                 <field name="picking_checked"/>
               </field>
