--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -19,9 +19,12 @@
             <field name="arch" type="xml">
               <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
                   <field name="barcode"/>
-                  <field name="talla"/>
-                  <field name="color"/>
               </xpath>
+              <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="after">
+                <field name="talla"/>
+                <field name="color"/>
+              </xpath>
+
               <field name="origin" position="after">
                 <field name="picking_checked"/>
               </field>
