--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -21,8 +21,8 @@
                   <field name="barcode"/>
               </xpath>
               <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="after">
-                <field name="talla" readonly="1"/>
-                <field name="color" readonly="1"/>
+                <field name="talla"/>
+                <field name="color"/>
               </xpath>
 
               <field name="origin" position="after">
