--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -56,25 +56,15 @@
             </field>
         </record>
 
-        <record id="inventory_barcode_scanning" model="ir.ui.view">
-           <field name="name">Add functions to inventory</field>
-           <field name="model">stock.inventory</field>
-           <field name="inherit_id" ref="stock.view_inventory_form"/>
+        <record id="quant_Values_inventory_barcode_scanning" model="ir.ui.view">
+           <field name="name">Add functions to quant</field>
+           <field name="model">stock.quant</field>
+           <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
            <field name="arch" type="xml">
-             <field name="line_ids" position="before">
-               <h2>
-                   <field name="inventory_barcode" placeholder="Codigo de barras"/>
-               </h2>
+             <field name="product_id" position="before">
+               <field name="talla"/>
+               <field name="color"/>
              </field>
-             <field name="line_ids" position="after">
-               <div class="center-align" style="margin-top: 20px; margin-left: 10px; margin-bottom: 10px;">
-                 <button type="object" string="Grabar" name="generate_inventory_lines" class="oe_highlight"/>
-               </div>
-               <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
-                   <field name="log_scanner"/>
-               </div>
-             </field>
-
            </field>
        </record>
         <!-- ............... HERENCIA VISTA EN TREE ...............
