--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -59,7 +59,7 @@
         <record id="quant_Values_inventory_barcode_scanning" model="ir.ui.view">
            <field name="name">Add functions to quant</field>
            <field name="model">stock.quant</field>
-           <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
+           <field name="inherit_id" ref="stock.view_stock_quant_tree">
              <field name="product_id" position="before">
                <field name="talla"/>
                <field name="color"/>
