--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <data>
          <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Add Tributes to Product</field>
             <field name="model">product.template</field>
@@ -92,5 +93,7 @@
 
       -->
 
+
+    </data>
 
 </odoo>
