--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -69,7 +69,7 @@
         <record id="inventory_barcode_scanning" model="ir.ui.view">
            <field name="name">Add functions to inventory</field>
            <field name="model">stock.inventory</field>
-           <field name="inherit_id" ref="stock.view_inventory_form"/>
+           <field name="inherit_id" ref="stock.view_inventory_form">
            <field name="arch" type="xml">
              <field name="line_ids" position="before">
                <h2>
