--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>
+    <odoo>
          <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Add Tributes to Product</field>
             <field name="model">product.template</field>
@@ -85,5 +85,6 @@
              </field>
 
            </field>
+            </field>
        </record>
 </odoo>
