--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -69,11 +69,18 @@
                        <field name="inventory_barcode" placeholder="Codigo de barras"/>
                    </h2>
                 </field>
-                <field name="product_id" position="before">
-                   <field name="talla"/>
-                   <field name="color"/>
-               </field>
            </field>
+         </record>
+         <record id="attributes_of_product" model="ir.ui.view">
+           <field name="name">Add atrributes to products inventory </field>
+           <field name="model">stock.inventory.line</field>
+           <field name="inherit_id" ref="stock.view_inventory_form"/>
+           <field name="arch" type="xml">
+             <field name="product_id" position="before">
+                <field name="talla"/>
+                <field name="color"/>
+            </field>
+          </field>
          </record>
          <record id="values_in_stock_quant" model="ir.ui.view">
             <field name="name">Add functions to quant</field>
